--- a/css/main.css
+++ b/css/main.css
@@ -5864,8 +5864,14 @@ ul, li {
   -ms-flex-pack: justify;
   justify-content: space-between; }
   .ffd-form__row--selects {
-    padding-left: 20px;
-    padding-right: 50px; }
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start; }
+    .ffd-form__row--selects .ffd-form__label {
+      border: none; }
+      .ffd-form__row--selects .ffd-form__label:first-child {
+        margin-right: 36px; }
 
 .ffd-form__label {
   position: relative;
@@ -5911,7 +5917,8 @@ ul, li {
 .ffd-form__label-mame {
   position: absolute;
   top: -15px;
-  left: 20px;
+  left: 12px;
+  z-index: 2;
   display: block;
   padding: 5px;
   background-color: #262626;
@@ -5919,7 +5926,8 @@ ul, li {
   overflow: hidden;
   color: #fff;
   font-size: 16px;
-  font-family: "DinProMedium", sans-serif; }
+  font-family: "DinProMedium", sans-serif;
+  text-transform: uppercase; }
 
 .ffd-form__select {
   width: 230px;
@@ -5929,11 +5937,19 @@ ul, li {
 
 .ui-selectmenu-button.ui-button {
   width: 100%;
+  padding: 22px 0	16px 16px;
   background-color: transparent;
-  border: none;
+  border: 2px solid transparent;
+  border-bottom: none;
+  -webkit-border-radius: 0;
+  border-radius: 0;
   color: rgba(235, 235, 235, 0.35);
   font-size: 21px;
   font-family: "DinProMediumItalic", sans-serif; }
+  .ui-selectmenu-button.ui-button.ui-selectmenu-button-open {
+    border-color: #fff; }
+    .ui-selectmenu-button.ui-button.ui-selectmenu-button-open .ui-icon {
+      display: none; }
 
 .ui-button {
   padding-left: 0;
@@ -5964,6 +5980,28 @@ ul, li {
 .ui-button:active .ui-icon,
 .ui-button:hover .ui-icon {
   background-image: none; }
+
+.ui-selectmenu-menu .ui-menu {
+  background-color: #262626;
+  border-width: 2px; }
+
+.ui-menu .ui-menu-item-wrapper {
+  padding: 5px 7px;
+  color: #A6A6A6;
+  text-transform: uppercase;
+  font-family: "DinProMedium", sans-serif; }
+
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover {
+  background-color: #fff;
+  color: #262626;
+  border: none; }
+
+.ui-widget.ui-widget-content {
+  border-top: none;
+  border-color: #fff; }
+
+.ui-selectmenu-text {
+  text-transform: uppercase; }
 
 .ffd-form__buttons {
   padding: 5px;
@@ -6441,17 +6479,20 @@ ul, li {
     max-height: 200px; }
   .contacts-left {
     padding-top: 50px; }
-  .ffd-form__label input[type="text"], .ffd-form__label textarea {
+  .ffd-form__label input[type="text"], .ffd-form__label textarea,
+  .ui-selectmenu-button.ui-button {
     padding: 7px;
     padding-top: 10px;
+    padding-right: 0;
     font-size: 16px; }
   .ui-selectmenu-button.ui-button {
-    font-size: 18px; }
+    font-size: 16px; }
   .ffd-form__buttons button {
     font-size: 16px; }
   .ffd-form__label-mame {
     font-size: 11px;
-    top: -12px; }
+    top: -12px;
+    left: 5px; }
   .ffd-form__label textarea {
     height: 90px; }
   .search-screen__nav ul li {
@@ -6780,6 +6821,8 @@ ul, li {
     color: #262626; }
   .footer--standart .footer-menu li a, .footer--portfolio .footer-menu li a {
     color: #fff; }
+  .ffd-form__row--selects .ffd-form__label:first-child {
+    margin-right: 0; }
   /*Disable Animation on Mobile Devices*/
   .animated {
     /*CSS transitions*/
